--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,10 @@
   <groupId>com.SeleniumTestNG</groupId>
   <artifactId>com.SeleniumTestNG</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
   <build>
-    <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
-    <plugins>
+       <plugins>
+              
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
@@ -22,7 +15,36 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-    </plugins>
+   
+              <plugin>
+                     <groupId>org.apache.maven.plugins</groupId>
+                     <artifactId>maven-surefire-plugin</artifactId>
+                     <version>2.16</version>
+                     <configuration>
+                   <suiteXmlFiles>
+                    <suiteXmlFile>${basedir}/testng.xml</suiteXmlFile>
+                     </suiteXmlFiles> 
+                  <!-- c:\Temp>java org.testng.TestNG -groups regressiontest - testname AllTests-->
+                    <!--<groups>regressiontest</groups> -->
+                    <!-- <trimStackTrace>false</trimStackT;race> -->
+                    <!--<suitename>AllTests</suitename>-->
+                           <!-- <suiteXmlFiles> -->
+                                 <!-- <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> --> 
+                           <!-- </suiteXmlFiles> -->
+                            <!-- Build with '-DskipTests=true' to bypass test execution @ build time Default: false -->
+                          <!-- <skipTests>${skipTests}</skipTests> --> 
+                           <!-- <testFailureIgnore>true</testFailureIgnore> -->
+                  </configuration>
+              </plugin>
+       </plugins>
+       <resources>
+              <!-- <resource> <directory>src/test/resources</directory> </resource> -->
+       </resources>
+  
+  
+    <sourceDirectory>src</sourceDirectory>
+ 
+    
   </build>
   <dependencies>
   	<dependency>
